<resources>
    <string name="app_name">Money Manager</string>
    <string name="pasqyra">Pasqyra</string>
    <string name="kategoria">Kategoria</string>
    <string name="kursimet">Kursimet</string>
    <string name="huazimet">Huazimet</string>
    <string name="histori">Histori</string>
    <string name="cilesimet">Cilësimet</string>
    <string name="ftoni_miqte">Ftoni miqtë</string>
    <string name="rrethnesh">Rreth nesh</string>

    <string name="drawer_open">Drawer Hapur</string>
    <string name="drawer_close">Draweri mbyllur</string>

    <string name="hello_blank_fragment">Fragment ende i pa përpunuar</string>

    <string name="next">VAZHDO</string>
    <string name="skip">TEJKALO</string>
    <string name="start">FILLO</string>

    <string name="slide_1_title">Pasqyra</string>
    <string name="slide_1_desc">Pasqyrimi i të gjitha të hollave (shpenzimet dhe fitimet).</string>

    <string name="slide_2_title">Huazimet</string>
    <string name="slide_2_desc">Llogaritja e huazimeve.</string>

    <string name="slide_3_title">Kursimet</string>
    <string name="slide_3_desc">Menagjimi më efikas për kursime.</string>

    <string name="slide_4_title">Histori</string>
    <string name="slide_4_desc">Pasqyra për 12 muajt e vitit (hyrjet dhe daljet).</string>

    <string name="play_again_desc">Për ta parë intron përsëri shko: Settings -> apps -> Money Manager -> clear data</string>
    <string name="play_again">Fillo përsëri</string>


    <string name="tehyrat">Të hyra</string>
    <string name="shpenzimet">Shpenzime</string>
    <string name="addInIncomeOrExpense">Transaksion i ri</string>
    <string name="hint_value">Vlera</string>
    <string name="categories">Kategoritë</string>
    <string name="empty">Plotësoni te dhënat</string>
    <string name="expenseText">Shpenzim</string>
    <string name="incomeText">Hyrje</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_date">Dhjetor 2016</string>
    <string name="aboutapp">Money Menager është aplikacion i cili shërben për menaxhimin e parasë, saktësishtë menaxhimin e fitimeve dhe të shpenzimeve mujore. Me anë të këtij aplikacioni ju mund ti shikoni të gjitha harxhimet dhe fitimet që i keni bërë mbrenda një periudhe kohore, poashtu keni mundësinë që ti menaxhoni huazimet apo kursimet tuaja. </string>
    <string name="bilanci">Bilanci</string>
    <string name="name">Emri</string>
    <string name="surname">Mbiemri</string>
    <string name="hint_title">Titulli</string>
    <string name="addKursime">Kursim i ri</string>
    <string name="addHuazim">Huazim i ri</string>
    <string name="convert">Konvertime</string>
    <string name="openborrow">Huazimi</string>


</resources>
