<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              tools:context="com.berishaerblin.moneymanager.Category.RrethNesh">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_date"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rreth Nesh"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:id="@+id/rrethnesh"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutapp"
                    android:visibility="gone"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:id="@+id/description"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zhvilluesit"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:id="@+id/zhvilluesit"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zhvilluar nga disa Student të Universitetit të Prizrenit 'Ukshin Hoti'. "
                    android:visibility="gone"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:id="@+id/emratzh"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kontakt"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:id="@+id/kontakt"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/contactForm"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:visibility="gone">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/subject"
                        android:hint="Subjekti"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mesazhi"
                        android:hint="Mesazhi"
                        android:lines="7"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dergo"
                        android:id="@+id/dergo"
                        android:layout_gravity="right"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
